# reqwest-error-demo

./: Cargo.toml
src/: main.rs
