[package]
name = "reqwest-error-demo"
version = "0.0.1"
authors = [
    "Sunshine <sunshine@uberspace.net>",
]
edition = "2018"
description = "reqwest error demo"
include = [
    "src/*.rs",
    "Cargo.toml",
]

[dependencies.reqwest]
version = "0.11.8"
default-features = false
features = ["default-tls", "blocking", "gzip"]
